@@ -132,11 +132,14 @@ function rcmail_prev_sibling(elm)
 
 <table border="0" cellspacing="0" width="100%" summary=""><tbody>
 <tr>
-<td>
+<td style="white-space:nowrap">
 <roundcube:button type="input" command="send" class="button" label="sendmessage" tabindex="8" />
 <roundcube:button type="input" command="list" class="button" label="cancel" tabindex="9" />
 </td>
-<td align="right">
+<td style="text-align:center">
+  <label><span style="white-space:nowrap"><roundcube:label name="savesentmessagein" />:</span> <roundcube:object name="storetarget" /></label>
+</td>
+<td style="text-align:right; white-space:nowrap">
  <roundcube:label name="editortype" />:&nbsp;
  <span class="radios-left"><roundcube:object name="editorSelector" tabindex="10" /></span>
 </td>
